@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- To be able to upgrade the URL Tool upgrade the Tree Tool event subscription
+  is disabled during the ugrade.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
